--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -6,6 +6,7 @@ name: Python package
 on:
   push:
     branches: [ "main" ]
+    tags: [ 'v*.*.*' ]  # PyPI publish only on version tags like v0.1.0
   pull_request:
     branches: [ "main" ]
 
@@ -16,7 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10", "3.11"]
+        python-version: ["3.8", "3.10", "3.11"]
 
     steps:
     - uses: actions/checkout@v4
@@ -27,7 +28,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest
+        pip install pytest flake8 mypy pylint
+        pip install .[dev]  # Assuming extras_require["dev"] includes pytest-cov, etc.
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
@@ -35,6 +37,38 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Type check with mypy
+      run: mypy .
+    - name: Lint with pylint
+      run: pylint .
     - name: Test with pytest
       run: |
-        pytest
+        pytest --cov=backup_plan --cov-report=xml --cov-report=term
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v4
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        files: ./coverage.xml
+
+  # Publishing to PyPI (commented out until ready)
+  publish:
+    name: Publish to PyPI
+    needs: build
+    if: startsWith(github.ref, 'refs/tags/v')
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write  # required for trusted publishing
+      contents: read
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.8'
+      - name: Build package
+        run: |
+          python -m pip install --upgrade build
+          python -m build
+      # - name: Publish package
+      #   uses: pypa/gh-action-pypi-publish@release/v1
+      #   with:
+      #     packages-dir: dist/
